<resources>
    <string name="app_name">iConference</string>
    <string name="action_settings">Settings</string>

    <!--<string name="service_url">Service URL</string>-->
    <string name="email">Email</string>
    <!--<string name="pref_service_default">http://192.168.4.102:8732/MyRESTService.svc/</string>-->
    <string name="pref_email_default"></string>
    <string name="pref_default"></string>
    <!--<string name="pref_webservice_summary">Set web service url</string>-->
    <string name="pref_email_title">Set room email</string>
    <string name="pref_email_summary">Events created to this room will be fetched</string>


    <string name="app_id">Application ID</string>
    <string name="pref_app_id_title">Set application ID</string>
    <string name="pref_app_id_summary">App ID registered with the email</string>

    <string name="room">Room</string>
    <string name="pref_room_title">Set room name</string>
    <string name="pref_room_summary">Room name to be displayed in the app</string>

    <string name="fetch_freq">Fetch Frequency</string>
    <string name="pref_fetch_freq_title">Set number of days</string>
    <string name="pref_fetch_freq_summary">Fetch meetings for the specified number of days</string>

    <string name="company_id">Company ID</string>
    <string name="company_id_summary">Set valid company ID</string>
    <string name="floor_id">Floor ID</string>
    <string name="floor_id_summary">Set floor ID</string>
    <string name="room_id">Room ID</string>
    <string name="room_id_summary">Set room ID</string>
    <string name="kiosk">Kiosk</string>

    <string name="pref_title_customer_kiosk_mode">Kiosk Mode</string>
    <string name="pref_key_kiosk_mode">pref_key_kiosk_mode</string>
    <string name="pref_summary_customer_kiosk_mode">Enable kiosk mode</string>

    <!-- Alert Dialog -->
    <string name="title_alert_dialog">Alert</string>
    <string name="title_ok">OK</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="default_settings_password">bdna2017</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_cancel">Cancel</string>

    <!-- Login -->
    <string name="message_enter_url">Enter URL in settings</string>
    <string name="message_enter_company_id">Enter a valid company ID</string>
    <string name="message_enter_floor_id">Enter a valid floor ID</string>
    <string name="message_enter_room_id">Enter a valid room ID</string>

    <string name="message_enter_email">Enter a valid email in settings</string>
    <string name="message_enter_app_id">Set a valid app ID in settings</string>
    <string name="message_enter_room">Set room name in settings</string>
    <string name="message_enter_fetch_freq">Set fetch frequency in settings</string>

    <!-- Main Activity -->
    <!--<string name="meeting_floor_info">Floor : %1$s</string>-->
    <!--<string name="meeting_room_info">Venue : %1$s\n Floor : %2$s</string>-->
    <string name="meeting_organiser_name">Organiser : %1$s</string>
    <string name="meeting_floor_info">Floor : %1$s</string>
    <string name="meeting_room_info">Venue : %1$s</string>
    <string name="no_connectivity">No connectivity</string>
    <string name="meeting_details_unavailable">Meeting details unavailable</string>
    <string name="no_meetings">No meetings for the day</string>

    <string name="title_app">iConference</string>
    <string name="settings_access">Access settings</string>
    <string name="left_nav">Navigate left</string>
    <string name="right_nav">Navigate right</string>
    <string name="logo">BDNA logo</string>
    <string name="company_logo_one">NCC logo one</string>
    <string name="company_logo_two">Souq Planet</string>
    <string name="company_logo_three">NIGM</string>
    <string name="company_logo_four">Aman</string>
    <string name="company_logo_five">Business DNA</string>
    <string name="company_logo_six">NCC logo two</string>
    <string name="company_logo_seven">Slim\'nlite</string>
    <string name="company_logo_eight">Tamween</string>

    <!-- Meeting Info -->
    <string name="meeting_booked_all_day">Booked : All Day</string>
    <string name="meeting_canceled">Canceled</string>
    <string name="meeting_booked">Booked : %1$s%2$s - %3$s</string>
    <string name="meeting_ends">Ends in %1$s min</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="upcoming">UPCOMING</string>
    <string name="no_attendees">No attendees available</string>

    <!-- Device Admin -->
    <string name="device_admin">Device Admin</string>
    <string name="device_admin_description">Device Admin Description</string>

    <!-- ACRA -->
    <string name="acra_toast">Something went wrong\nA report will be saved</string>
</resources>
