<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_meeting_bg_four"
    tools:context="ae.businessdna.iconference.activities.MainActivity">

    <ImageButton
        android:id="@+id/settings_access"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:contentDescription="@string/settings_access"
        android:padding="10dp" />

    <!--<com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator-->
    <!--android:id="@+id/viewpagerarrowındicatis"-->
    <!--android:layout_width="480dp"-->
    <!--android:layout_height="wrap_content">-->

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/card_view_header"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_border">

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_keyboard_arrow_left_white_48dp"
            android:visibility="gone" />

        <ae.businessdna.iconference.utility.ClickableViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_left"
            android:layout_toStartOf="@+id/iv_right"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_keyboard_arrow_right_white_48dp"
            android:visibility="gone" />

    </RelativeLayout>
    <!--</com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator>-->

    <RelativeLayout
        android:id="@+id/rl_empty"
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/card_view_header"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_border"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/card_view_header"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <SurfaceView
                android:id="@+id/sv_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/rl_floor_room_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_room_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_room_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_floor_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextClock
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/ll_room_floor"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/tv_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_current_time"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/gold_primary_dark"
                android:textSize="24sp"
                android:visibility="visible" />

            <View
                android:id="@+id/v_title"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_below="@+id/tv_current_date"
                android:background="@color/colorPrimary"
                android:visibility="gone" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_bdna_white" />

        </RelativeLayout>

    </LinearLayout>

    <!--    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-smallcaps"
            android:text="iConference"
            android:textColor="@color/gold_primary_dark"
            android:textSize="32sp" />-->

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:background="@color/gold_primary_dark">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/title_app"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--    <ae.businessdna.iconference.utility.MarqueeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"/>-->
    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_inner_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_one"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_one" />

            <ImageView
                android:id="@+id/iv_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_two"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_two" />

            <ImageView
                android:id="@+id/iv_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_three"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_three" />

            <ImageView
                android:id="@+id/iv_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_four"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_four" />

            <ImageView
                android:id="@+id/iv_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_five"
                android:padding="4dp"
                android:src="@drawable/bdna" />

            <ImageView
                android:id="@+id/iv_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_six"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_six" />

            <ImageView
                android:id="@+id/iv_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_seven"
                android:padding="4dp"
                android:src="@drawable/snl" />

            <ImageView
                android:id="@+id/iv_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/company_logo_eight"
                android:padding="4dp"
                android:src="@drawable/ncc_homepage_eight" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
